--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "app",
+  "name": "neura-app",
   "version": "1.0.0",
   "description": "URL shortening service using Node and Express",
-  "scripts": {
-    "build": "tsc",
-    "serve": "node dist/index.js",
-    "dev": "nodemon ./src/index.ts",
-    "lint": "eslint \"src/**/*.ts\"",
-    "license:prod": "license-checker-rseidelsohn --production",
-    "test": "npm run test:spec && npm run test:e2e",
-    "test:spec": "jest",
-    "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
-    "test:all": "npm audit && npm run license:prod && npm run test"
+  "keywords": [
+    "express-starter",
+    "express-typescript-starter",
+    "express",
+    "express starter"
+  ],
+  "author": "Dusan Djordjevic <theneura@live.com>",
+  "license": "MIT",
+  "engines": {
+    "node": ">=16"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
+  "scripts": {
+    "build": "tsc --pretty",
+    "clean": "rimraf lib",
+    "lint": "eslint \"src/**/*.ts\"",
+    "test": "npm run test:e2e",
+    "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "git add -A src",
+    "postversion": "git push && git push --tags"
+  },
   "dependencies": {
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
@@ -25,9 +39,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
-    "http-terminator": "^3.2.0",
-    "ms": "^2.1.3",
-    "nanoid": "^3.0.0"
+    "http-terminator": "^3.2.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
@@ -39,18 +51,16 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@types/ms": "^0.7.31",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.0.3",
-    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.2",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.8.3",
-    "license-checker-rseidelsohn": "^3.1.0"
+    "typescript": "^4.8.3"
   }
 }
