--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
 # Application
-APP_NAME = "url-shortener"
+APP_NAME = "neura-express-app"
 APP_PORT = 3000
 
 # Logger
 LOG_LEVEL = info
 LOG_ENABLED = true
 LOG_PRETTY = true
-
-# Shortener
-SHORTENER_MAX_CHAR_LENGTH = 10
