--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "test": "npm run test:e2e",
     "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test && npm run lint",
-    "preversion": "npm run lint",
+    "prepublishOnly": "npm run test && npm run lint && npm audit",
+    "preversion": "npm run test && npm run lint && npm audit",
     "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
