replacing npm with yarn

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "build": "tsc --pretty",
     "clean": "rimraf lib",
     "lint": "eslint \"src/**/*.ts\"",
-    "test": "npm run test:e2e",
+    "test": "yarn test:e2e",
     "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run test && npm run lint && npm audit",
-    "preversion": "npm run test && npm run lint && npm audit",
+    "prepare": "yarn build",
+    "prepublishOnly": "yarn test && yarn lint && yarn audit",
+    "preversion": "yarn test && yarn lint && yarn audit",
     "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
