--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "bunyan-format": "^0.2.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
-    "http-terminator": "^3.2.0"
+    "http-terminator": "^3.2.0",
+    "joi": "^17.6.4"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
