--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "dependencies": {
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
-    "http-terminator": "^3.2.0",
-    "joi": "^17.6.4"
+    "http-terminator": "^3.2.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
