--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "bunyan-format": "^0.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "http-terminator": "^3.2.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
     "@types/bunyan-format": "^0.2.5",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
